fix spacing on l,w,h inputs

--- a/src/App.css
+++ b/src/App.css
@@ -31,10 +31,16 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: space-evenly;
   border-radius: .5rem;
 }
 
+.top-inputs {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-right: 50px;
+}
 .input-pairing {
   display: flex;
   flex-direction: row;
@@ -47,16 +53,15 @@
   margin-left: .15rem;
   height: 2rem;
   font-size: 1rem;
-  flex-grow: 2;
+  flex-grow: 3;
 }
 
 .feet {
-  flex-grow: 1;
+  padding: .5rem;
 }
 
-.break-in-inputs {
+.or-input-divider {
   height: 5px;
-  /* margin-top: 20px; */
   margin-bottom: 20px;
 }
 
